# BespokeSynth_WASM

./: .eslintrc.js  .gitignore  .gitmodules  AGENTS.md  DEPLOYMENT_GUIDE.md  DEVELOPER_CONTEXT.md  EXAMPLE.md  FIX_COMPLETE_README.md  FIX_SUMMARY_WEBGPU.md  README.md  README_NPM.md  README_WEBAPP.md  SETUP_SUMMARY.md  WASM_FIX_SUMMARY.md  WASM_INITIALIZATION_FIX_SUMMARY.md  WEBGPU_HEADER_FIX.md  deploy.py  package.json  test-build.sh  tsconfig.json  webpack.config.js
Source/: Scale.cpp  SynthGlobals.h  VSTPlayhead.cpp  VSTPlayhead.h  VSTPlugin.h  libMTSClient.h
assembly/: index.ts
build_wasm/: BespokeSynthWASM_test.html  BespokeSynthWASM_test.js  CMakeCache.txt  Makefile  cmake_install.cmake
libs/JUCE/modules/juce_audio_processors/processors/: juce_AudioPluginInstance.h
libs/JUCE/modules/juce_core/native/: juce_wasm_SystemStats.cpp
libs/JUCE/modules/juce_data_structures/app_properties/: juce_PropertiesFile.cpp
libs/leathers/leathers/: pop
scripts/: prebuild.js
src/: index.html  index.ts  styles.css
wasm/: CMakeLists.txt  DEBUG_OUTPUT_EXAMPLES.md  INITIALIZATION_FIXES.md  PANEL_DEBUGGING.md  README.md  build.sh  codespace_build.sh  panel_debug_demo.html  shell.html
wasm/include/: Knob.h  SDL2AudioBackend.h  Tunings.h  WasmBridge.h  WebGPUContext.h  WebGPURenderer.h  exprtk.hpp  juce_compat.h
wasm/include/BespokeWasm/: WasmBridge.h  WebGPUContext.h  WebGPURenderer.h  exprtk.hpp
wasm/include/BespokeWasm/json/: json.h  reader.h  writer.h
wasm/shaders/: render2d.wgsl
wasm/src/: Knob.cpp  SDL2AudioBackend.cpp  WasmBridge.cpp  WasmMain.cpp  WebGPUContext.cpp  WebGPURenderer.cpp
wasm/tests/: test_main.cpp
wasm/types/: bespoke-synth.d.ts
